--- a/include/pharovm/config.h.in
+++ b/include/pharovm/config.h.in
@@ -7,6 +7,8 @@
 #define VM_NAME "@VM_NAME@"
 #define DEFAULT_IMAGE_NAME "@DEFAULT_IMAGE_NAME@"
 
+#define VM_LABEL(foo) totalBytecodeCount++;
+
 /* Availability of Functions */
 
 #cmakedefine HAVE_DIRENT_H
